# HarishViswanath-pythonguide

Day_1/: BillSplitter.py  OtpValidator.py  StudentReport.py  shopping_cart.py  word_frequency.py
Day_10/: config_manager.py  documented_library.py  grade_report.py
Day_2/: atm_machine.py  currency_converter.py  delivery_time_tracker.py  password_strength_checker.py  recharge_plan_selector.py  train_fare_calucaltor.py
Day_3/: infinite_coupon_generator.py  quiz_score_tracker.py
Day_4/: browser_history_navigator.py  fare_cache.py  hostpital_emergency_queue.py  music_playlist.py  stock_tracker.py
Day_5/: binary_search.py  contact_book.py  recursion_filesystem.py  sorting_leaderboard.py
Day_6/: bank_account.py  hospital_management.py  m_coloring_problem.py  student_report.py  vehicle_fleet.py
Day_7/: checker.py  comprehensions.py  context_manager.py  pyproject.toml
Day_8/: async_newsfeed.py  multi_processing.py  multi_threaded_downloader.py
Day_9/: annotated_banking_api.py  data_validator.py
data/: english.csv  history.csv  hs.csv  pe.csv  science.csv
output/: report.csv
