[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-app"
version = "1.0.0"
description = "Day 7 venv & dependency manager assignment"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "pandas>=2.0",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["."]